gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail20040.d
version https://git-lfs.github.com/spec/v1
oid sha256:45512c16eeb03bbb3bfd7f8541b2ae829aae3d247f32430b6ee14b6edd6ae3e9
size 516
